# libfmapi

./: .gitignore  .travis.yml  AUTHORS  ChangeLog  Makefile.am  README  acinclude.m4  appveyor.yml  build.ps1  configure.ac  libfmapi-wiki.ini  libfmapi.ini  libfmapi.pc.in  libfmapi.spec.in  synclibs.ps1  synclibs.sh  syncsharedlibs.sh
.github/workflows/: build_ossfuzz.yml
.travis/: runtests.sh  script.sh
common/: config_winapi.h
documentation/: MAPI definitions.asciidoc
dpkg/: changelog.in  control  copyright  copyright.in  rules
include/: Makefile.am  libfmapi.h.in
include/libfmapi/: definitions.h  definitions.h.in  error.h  extern.h  features.h  features.h.in  types.h  types.h.in
libfmapi/: Makefile.am  libfmapi.c  libfmapi.rc.in  libfmapi_checksum.c  libfmapi_checksum.h  libfmapi_class_identifier.c  libfmapi_class_identifier.h  libfmapi_codepage.c  libfmapi_codepage.h  libfmapi_debug.c  libfmapi_debug.h  libfmapi_definitions.h.in  libfmapi_entry_identifier.c  libfmapi_entry_identifier.h  libfmapi_error.c  libfmapi_error.h  libfmapi_extern.h  libfmapi_guid.c  libfmapi_guid.h  libfmapi_libcerror.h  libfmapi_libcnotify.h  libfmapi_libcstring.h  libfmapi_libfdatetime.h  libfmapi_libfguid.h  libfmapi_libfwnt.h  libfmapi_libuna.h  libfmapi_lzfu.c  libfmapi_lzfu.h  libfmapi_one_off_entry_identifier.c  libfmapi_one_off_entry_identifier.h  libfmapi_property_type.c  libfmapi_property_type.h  libfmapi_service_provider_identifier.c  libfmapi_service_provider_identifier.h  libfmapi_support.c  libfmapi_support.h  libfmapi_types.h  libfmapi_unused.h  libfmapi_value_type.c  libfmapi_value_type.h  (+2 more)
manuals/: Makefile.am  libfmapi.3
msvscpp/: Makefile.am  libfmapi.sln
msvscpp/fmapi_test_checksum/: fmapi_test_checksum.vcproj
msvscpp/fmapi_test_entry_identifier/: fmapi_test_entry_identifier.vcproj
msvscpp/fmapi_test_error/: fmapi_test_error.vcproj
msvscpp/fmapi_test_get_version/: fmapi_test_get_version.vcproj
msvscpp/fmapi_test_lzfu/: fmapi_test_lzfu.vcproj
msvscpp/fmapi_test_one_off_entry_identifier/: fmapi_test_one_off_entry_identifier.vcproj
msvscpp/fmapi_test_property_type/: fmapi_test_property_type.vcproj
msvscpp/fmapi_test_support/: fmapi_test_support.vcproj
msvscpp/fmapi_test_value_type/: fmapi_test_value_type.vcproj
msvscpp/fmapi_test_x400_object_identifier/: fmapi_test_x400_object_identifier.vcproj
msvscpp/libcdata/: libcdata.vcproj
msvscpp/libcerror/: libcerror.vcproj
msvscpp/libcnotify/: libcnotify.vcproj
msvscpp/libcstring/: libcstring.vcproj
msvscpp/libcthreads/: libcthreads.vcproj
msvscpp/libfdatetime/: libfdatetime.vcproj
msvscpp/libfguid/: libfguid.vcproj
msvscpp/libfmapi/: libfmapi.vcproj
msvscpp/libfwnt/: libfwnt.vcproj
msvscpp/libuna/: libuna.vcproj
ossfuzz/: Makefile.am  entry_identifier_fuzzer.cc  lzfu_fuzzer.cc  one_off_entry_identifier_fuzzer.cc  ossfuzz_libfmapi.h
po/: ChangeLog
tests/: Makefile.am  fmapi_test_checksum.c  fmapi_test_entry_identifier.c  fmapi_test_error.c  fmapi_test_get_version.c  fmapi_test_libcerror.h  fmapi_test_libcstring.h  fmapi_test_libfmapi.h  fmapi_test_libuna.h  fmapi_test_lzfu.c  fmapi_test_macros.h  fmapi_test_memory.c  fmapi_test_memory.h  fmapi_test_one_off_entry_identifier.c  fmapi_test_property_type.c  fmapi_test_support.c  fmapi_test_unused.h  fmapi_test_value_type.c  fmapi_test_x400_object_identifier.c  pkgbuild.sh  runtests.sh  test_api_functions.ps1  test_api_types.ps1  test_api_types.sh  test_library.at  test_library.ps1  test_library.sh  test_manpages.at
tests/data/: entry_identifier.1  lzfu.1  one_off_entry_identifier.1
