include_HEADERS = \
	libfmapi.h

pkginclude_HEADERS = \
	libfmapi/definitions.h \
	libfmapi/error.h \
	libfmapi/extern.h \
	libfmapi/features.h \
	libfmapi/types.h

EXTRA_DIST = \
	libfmapi.h.in \
	libfmapi/definitions.h.in \
	libfmapi/features.h.in \
	libfmapi/types.h.in

DISTCLEANFILES = \
	libfmapi.h \
	libfmapi/definitions.h \
	libfmapi/features.h \
	libfmapi/types.h \
	Makefile \
	Makefile.in

