MSVSCPP_FILES = \
	fmapi_test_checksum/fmapi_test_checksum.vcproj \
	fmapi_test_entry_identifier/fmapi_test_entry_identifier.vcproj \
	fmapi_test_error/fmapi_test_error.vcproj \
	fmapi_test_lzfu/fmapi_test_lzfu.vcproj \
	fmapi_test_one_off_entry_identifier/fmapi_test_one_off_entry_identifier.vcproj \
	fmapi_test_property_type/fmapi_test_property_type.vcproj \
	fmapi_test_support/fmapi_test_support.vcproj \
	fmapi_test_value_type/fmapi_test_value_type.vcproj \
	libcdata/libcdata.vcproj \
	libcerror/libcerror.vcproj \
	libcnotify/libcnotify.vcproj \
	libcthreads/libcthreads.vcproj \
	libfdatetime/libfdatetime.vcproj \
	libfguid/libfguid.vcproj \
	libfmapi/libfmapi.vcproj \
	libfwnt/libfwnt.vcproj \
	libuna/libuna.vcproj \
	libfmapi.sln

EXTRA_DIST = \
	$(MSVSCPP_FILES)

MAINTAINERCLEANFILES = \
	Makefile.in

distclean: clean
	-rm -f Makefile

